Fixed adding user bug, removed horizontal scroll on manage team table, replaced dropdown in manage team role column with role text, and removed errant log

--- a/client/src/components/Allocations/AllocationsModals/AllocationsManageTeamTable/AllocationsManageTeamTable.module.scss
+++ b/client/src/components/Allocations/AllocationsModals/AllocationsManageTeamTable/AllocationsManageTeamTable.module.scss
@@ -27,6 +27,8 @@
   overflow: auto;
 }
 .manage-team-table {
+  overflow-x: hidden;
+  max-width: 100%;
   font-size: 0.875rem;
   line-height: 2rem;
   margin: 0 1rem;
